@@ -330,6 +330,306 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testIdOutOfIntegerRange ()
+specifier|public
+name|void
+name|testIdOutOfIntegerRange
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|String
+name|GET_ALL_USERS_CMD
+init|=
+literal|"echo \""
+operator|+
+literal|"nfsnobody:x:4294967294:4294967294:Anonymous NFS User:/var/lib/nfs:/sbin/nologin\n"
+operator|+
+literal|"nfsnobody1:x:4294967295:4294967295:Anonymous NFS User:/var/lib/nfs1:/sbin/nologin\n"
+operator|+
+literal|"maxint:x:2147483647:2147483647:Grid Distributed File System:/home/maxint:/bin/bash\n"
+operator|+
+literal|"minint:x:2147483648:2147483648:Grid Distributed File System:/home/minint:/bin/bash\n"
+operator|+
+literal|"archivebackup:*:1031:4294967294:Archive Backup:/home/users/archivebackup:/bin/sh\n"
+operator|+
+literal|"hdfs:x:11501:10787:Grid Distributed File System:/home/hdfs:/bin/bash\n"
+operator|+
+literal|"daemon:x:2:2:daemon:/sbin:/sbin/nologin\""
+operator|+
+literal|" | cut -d: -f1,3"
+decl_stmt|;
+name|String
+name|GET_ALL_GROUPS_CMD
+init|=
+literal|"echo \""
+operator|+
+literal|"hdfs:*:11501:hrt_hdfs\n"
+operator|+
+literal|"rpcuser:*:29:\n"
+operator|+
+literal|"nfsnobody:*:4294967294:\n"
+operator|+
+literal|"nfsnobody1:*:4294967295:\n"
+operator|+
+literal|"maxint:*:2147483647:\n"
+operator|+
+literal|"minint:*:2147483648:\n"
+operator|+
+literal|"mapred3:x:498\""
+operator|+
+literal|" | cut -d: -f1,3"
+decl_stmt|;
+comment|// Maps for id to name map
+name|BiMap
+argument_list|<
+name|Integer
+argument_list|,
+name|String
+argument_list|>
+name|uMap
+init|=
+name|HashBiMap
+operator|.
+name|create
+argument_list|()
+decl_stmt|;
+name|BiMap
+argument_list|<
+name|Integer
+argument_list|,
+name|String
+argument_list|>
+name|gMap
+init|=
+name|HashBiMap
+operator|.
+name|create
+argument_list|()
+decl_stmt|;
+name|IdUserGroup
+operator|.
+name|updateMapInternal
+argument_list|(
+name|uMap
+argument_list|,
+literal|"user"
+argument_list|,
+name|GET_ALL_USERS_CMD
+argument_list|,
+literal|":"
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|uMap
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|7
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"nfsnobody"
+argument_list|,
+name|uMap
+operator|.
+name|get
+argument_list|(
+operator|-
+literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"nfsnobody1"
+argument_list|,
+name|uMap
+operator|.
+name|get
+argument_list|(
+operator|-
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"maxint"
+argument_list|,
+name|uMap
+operator|.
+name|get
+argument_list|(
+literal|2147483647
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"minint"
+argument_list|,
+name|uMap
+operator|.
+name|get
+argument_list|(
+operator|-
+literal|2147483648
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"archivebackup"
+argument_list|,
+name|uMap
+operator|.
+name|get
+argument_list|(
+literal|1031
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"hdfs"
+argument_list|,
+name|uMap
+operator|.
+name|get
+argument_list|(
+literal|11501
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"daemon"
+argument_list|,
+name|uMap
+operator|.
+name|get
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|IdUserGroup
+operator|.
+name|updateMapInternal
+argument_list|(
+name|gMap
+argument_list|,
+literal|"group"
+argument_list|,
+name|GET_ALL_GROUPS_CMD
+argument_list|,
+literal|":"
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|gMap
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|7
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"hdfs"
+argument_list|,
+name|gMap
+operator|.
+name|get
+argument_list|(
+literal|11501
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"rpcuser"
+argument_list|,
+name|gMap
+operator|.
+name|get
+argument_list|(
+literal|29
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"nfsnobody"
+argument_list|,
+name|gMap
+operator|.
+name|get
+argument_list|(
+operator|-
+literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"nfsnobody1"
+argument_list|,
+name|gMap
+operator|.
+name|get
+argument_list|(
+operator|-
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"maxint"
+argument_list|,
+name|gMap
+operator|.
+name|get
+argument_list|(
+literal|2147483647
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"minint"
+argument_list|,
+name|gMap
+operator|.
+name|get
+argument_list|(
+operator|-
+literal|2147483648
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"mapred3"
+argument_list|,
+name|gMap
+operator|.
+name|get
+argument_list|(
+literal|498
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testUserUpdateSetting ()
 specifier|public
 name|void
